parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> expression
Rule 2     expression -> NUM
Rule 3     expression -> BOOL
Rule 4     expression -> STR
Rule 5     expression -> indexing
Rule 6     expression -> LPAREN expression RPAREN
Rule 7     list -> LBRACKET in_list RBRACKET
Rule 8     in_list -> expression
Rule 9     in_list -> expression COMMA in_list
Rule 10    indexing -> STR LBRACKET expression RBRACKET
Rule 11    indexing -> list LBRACKET expression RBRACKET
Rule 12    expression -> expression ADD expression
Rule 13    expression -> STR ADD STR
Rule 14    expression -> list ADD list
Rule 15    expression -> expression SUB expression
Rule 16    expression -> expression MUL expression
Rule 17    expression -> expression DIV expression
Rule 18    expression -> expression FLDIV expression
Rule 19    expression -> expression MOD expression
Rule 20    expression -> expression POW expression
Rule 21    expression -> expression LT expression
Rule 22    expression -> expression LE expression
Rule 23    expression -> expression EQ expression
Rule 24    expression -> expression NE expression
Rule 25    expression -> expression GT expression
Rule 26    expression -> expression GE expression
Rule 27    expression -> BOOL OR BOOL
Rule 28    expression -> BOOL AND BOOL
Rule 29    expression -> NOT BOOL
Rule 30    expression -> expression IN expression

Terminals, with rules where they appear

ADD                  : 12 13 14
AND                  : 28
BOOL                 : 3 27 27 28 28 29
COMMA                : 9
DIV                  : 17
EQ                   : 23
FLDIV                : 18
GE                   : 26
GT                   : 25
IN                   : 30
LBRACKET             : 7 10 11
LE                   : 22
LPAREN               : 6
LT                   : 21
MOD                  : 19
MUL                  : 16
NE                   : 24
NOT                  : 29
NUM                  : 2
OR                   : 27
POW                  : 20
RBRACKET             : 7 10 11
RPAREN               : 6
STR                  : 4 10 13 13
SUB                  : 15
error                : 

Nonterminals, with rules where they appear

expression           : 1 6 8 9 10 11 12 12 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 30 30
in_list              : 7 9
indexing             : 5
list                 : 11 14 14
statement            : 0

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . expression
    (2) expression -> . NUM
    (3) expression -> . BOOL
    (4) expression -> . STR
    (5) expression -> . indexing
    (6) expression -> . LPAREN expression RPAREN
    (12) expression -> . expression ADD expression
    (13) expression -> . STR ADD STR
    (14) expression -> . list ADD list
    (15) expression -> . expression SUB expression
    (16) expression -> . expression MUL expression
    (17) expression -> . expression DIV expression
    (18) expression -> . expression FLDIV expression
    (19) expression -> . expression MOD expression
    (20) expression -> . expression POW expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression LE expression
    (23) expression -> . expression EQ expression
    (24) expression -> . expression NE expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression GE expression
    (27) expression -> . BOOL OR BOOL
    (28) expression -> . BOOL AND BOOL
    (29) expression -> . NOT BOOL
    (30) expression -> . expression IN expression
    (10) indexing -> . STR LBRACKET expression RBRACKET
    (11) indexing -> . list LBRACKET expression RBRACKET
    (7) list -> . LBRACKET in_list RBRACKET

    NUM             shift and go to state 3
    BOOL            shift and go to state 4
    STR             shift and go to state 5
    LPAREN          shift and go to state 7
    NOT             shift and go to state 9
    LBRACKET        shift and go to state 10

    statement                      shift and go to state 1
    expression                     shift and go to state 2
    indexing                       shift and go to state 6
    list                           shift and go to state 8

state 1

    (0) S' -> statement .



state 2

    (1) statement -> expression .
    (12) expression -> expression . ADD expression
    (15) expression -> expression . SUB expression
    (16) expression -> expression . MUL expression
    (17) expression -> expression . DIV expression
    (18) expression -> expression . FLDIV expression
    (19) expression -> expression . MOD expression
    (20) expression -> expression . POW expression
    (21) expression -> expression . LT expression
    (22) expression -> expression . LE expression
    (23) expression -> expression . EQ expression
    (24) expression -> expression . NE expression
    (25) expression -> expression . GT expression
    (26) expression -> expression . GE expression
    (30) expression -> expression . IN expression

    $end            reduce using rule 1 (statement -> expression .)
    ADD             shift and go to state 11
    SUB             shift and go to state 12
    MUL             shift and go to state 13
    DIV             shift and go to state 14
    FLDIV           shift and go to state 15
    MOD             shift and go to state 16
    POW             shift and go to state 17
    LT              shift and go to state 18
    LE              shift and go to state 19
    EQ              shift and go to state 20
    NE              shift and go to state 21
    GT              shift and go to state 22
    GE              shift and go to state 23
    IN              shift and go to state 24


state 3

    (2) expression -> NUM .

    ADD             reduce using rule 2 (expression -> NUM .)
    SUB             reduce using rule 2 (expression -> NUM .)
    MUL             reduce using rule 2 (expression -> NUM .)
    DIV             reduce using rule 2 (expression -> NUM .)
    FLDIV           reduce using rule 2 (expression -> NUM .)
    MOD             reduce using rule 2 (expression -> NUM .)
    POW             reduce using rule 2 (expression -> NUM .)
    LT              reduce using rule 2 (expression -> NUM .)
    LE              reduce using rule 2 (expression -> NUM .)
    EQ              reduce using rule 2 (expression -> NUM .)
    NE              reduce using rule 2 (expression -> NUM .)
    GT              reduce using rule 2 (expression -> NUM .)
    GE              reduce using rule 2 (expression -> NUM .)
    IN              reduce using rule 2 (expression -> NUM .)
    $end            reduce using rule 2 (expression -> NUM .)
    RPAREN          reduce using rule 2 (expression -> NUM .)
    COMMA           reduce using rule 2 (expression -> NUM .)
    RBRACKET        reduce using rule 2 (expression -> NUM .)


state 4

    (3) expression -> BOOL .
    (27) expression -> BOOL . OR BOOL
    (28) expression -> BOOL . AND BOOL

    ADD             reduce using rule 3 (expression -> BOOL .)
    SUB             reduce using rule 3 (expression -> BOOL .)
    MUL             reduce using rule 3 (expression -> BOOL .)
    DIV             reduce using rule 3 (expression -> BOOL .)
    FLDIV           reduce using rule 3 (expression -> BOOL .)
    MOD             reduce using rule 3 (expression -> BOOL .)
    POW             reduce using rule 3 (expression -> BOOL .)
    LT              reduce using rule 3 (expression -> BOOL .)
    LE              reduce using rule 3 (expression -> BOOL .)
    EQ              reduce using rule 3 (expression -> BOOL .)
    NE              reduce using rule 3 (expression -> BOOL .)
    GT              reduce using rule 3 (expression -> BOOL .)
    GE              reduce using rule 3 (expression -> BOOL .)
    IN              reduce using rule 3 (expression -> BOOL .)
    $end            reduce using rule 3 (expression -> BOOL .)
    RPAREN          reduce using rule 3 (expression -> BOOL .)
    COMMA           reduce using rule 3 (expression -> BOOL .)
    RBRACKET        reduce using rule 3 (expression -> BOOL .)
    OR              shift and go to state 25
    AND             shift and go to state 26


state 5

    (4) expression -> STR .
    (13) expression -> STR . ADD STR
    (10) indexing -> STR . LBRACKET expression RBRACKET

  ! shift/reduce conflict for ADD resolved as shift
    SUB             reduce using rule 4 (expression -> STR .)
    MUL             reduce using rule 4 (expression -> STR .)
    DIV             reduce using rule 4 (expression -> STR .)
    FLDIV           reduce using rule 4 (expression -> STR .)
    MOD             reduce using rule 4 (expression -> STR .)
    POW             reduce using rule 4 (expression -> STR .)
    LT              reduce using rule 4 (expression -> STR .)
    LE              reduce using rule 4 (expression -> STR .)
    EQ              reduce using rule 4 (expression -> STR .)
    NE              reduce using rule 4 (expression -> STR .)
    GT              reduce using rule 4 (expression -> STR .)
    GE              reduce using rule 4 (expression -> STR .)
    IN              reduce using rule 4 (expression -> STR .)
    $end            reduce using rule 4 (expression -> STR .)
    RPAREN          reduce using rule 4 (expression -> STR .)
    COMMA           reduce using rule 4 (expression -> STR .)
    RBRACKET        reduce using rule 4 (expression -> STR .)
    ADD             shift and go to state 27
    LBRACKET        shift and go to state 28

  ! ADD             [ reduce using rule 4 (expression -> STR .) ]


state 6

    (5) expression -> indexing .

    ADD             reduce using rule 5 (expression -> indexing .)
    SUB             reduce using rule 5 (expression -> indexing .)
    MUL             reduce using rule 5 (expression -> indexing .)
    DIV             reduce using rule 5 (expression -> indexing .)
    FLDIV           reduce using rule 5 (expression -> indexing .)
    MOD             reduce using rule 5 (expression -> indexing .)
    POW             reduce using rule 5 (expression -> indexing .)
    LT              reduce using rule 5 (expression -> indexing .)
    LE              reduce using rule 5 (expression -> indexing .)
    EQ              reduce using rule 5 (expression -> indexing .)
    NE              reduce using rule 5 (expression -> indexing .)
    GT              reduce using rule 5 (expression -> indexing .)
    GE              reduce using rule 5 (expression -> indexing .)
    IN              reduce using rule 5 (expression -> indexing .)
    $end            reduce using rule 5 (expression -> indexing .)
    RPAREN          reduce using rule 5 (expression -> indexing .)
    COMMA           reduce using rule 5 (expression -> indexing .)
    RBRACKET        reduce using rule 5 (expression -> indexing .)


state 7

    (6) expression -> LPAREN . expression RPAREN
    (2) expression -> . NUM
    (3) expression -> . BOOL
    (4) expression -> . STR
    (5) expression -> . indexing
    (6) expression -> . LPAREN expression RPAREN
    (12) expression -> . expression ADD expression
    (13) expression -> . STR ADD STR
    (14) expression -> . list ADD list
    (15) expression -> . expression SUB expression
    (16) expression -> . expression MUL expression
    (17) expression -> . expression DIV expression
    (18) expression -> . expression FLDIV expression
    (19) expression -> . expression MOD expression
    (20) expression -> . expression POW expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression LE expression
    (23) expression -> . expression EQ expression
    (24) expression -> . expression NE expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression GE expression
    (27) expression -> . BOOL OR BOOL
    (28) expression -> . BOOL AND BOOL
    (29) expression -> . NOT BOOL
    (30) expression -> . expression IN expression
    (10) indexing -> . STR LBRACKET expression RBRACKET
    (11) indexing -> . list LBRACKET expression RBRACKET
    (7) list -> . LBRACKET in_list RBRACKET

    NUM             shift and go to state 3
    BOOL            shift and go to state 4
    STR             shift and go to state 5
    LPAREN          shift and go to state 7
    NOT             shift and go to state 9
    LBRACKET        shift and go to state 10

    expression                     shift and go to state 29
    indexing                       shift and go to state 6
    list                           shift and go to state 8

state 8

    (14) expression -> list . ADD list
    (11) indexing -> list . LBRACKET expression RBRACKET

    ADD             shift and go to state 30
    LBRACKET        shift and go to state 31


state 9

    (29) expression -> NOT . BOOL

    BOOL            shift and go to state 32


state 10

    (7) list -> LBRACKET . in_list RBRACKET
    (8) in_list -> . expression
    (9) in_list -> . expression COMMA in_list
    (2) expression -> . NUM
    (3) expression -> . BOOL
    (4) expression -> . STR
    (5) expression -> . indexing
    (6) expression -> . LPAREN expression RPAREN
    (12) expression -> . expression ADD expression
    (13) expression -> . STR ADD STR
    (14) expression -> . list ADD list
    (15) expression -> . expression SUB expression
    (16) expression -> . expression MUL expression
    (17) expression -> . expression DIV expression
    (18) expression -> . expression FLDIV expression
    (19) expression -> . expression MOD expression
    (20) expression -> . expression POW expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression LE expression
    (23) expression -> . expression EQ expression
    (24) expression -> . expression NE expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression GE expression
    (27) expression -> . BOOL OR BOOL
    (28) expression -> . BOOL AND BOOL
    (29) expression -> . NOT BOOL
    (30) expression -> . expression IN expression
    (10) indexing -> . STR LBRACKET expression RBRACKET
    (11) indexing -> . list LBRACKET expression RBRACKET
    (7) list -> . LBRACKET in_list RBRACKET

    NUM             shift and go to state 3
    BOOL            shift and go to state 4
    STR             shift and go to state 5
    LPAREN          shift and go to state 7
    NOT             shift and go to state 9
    LBRACKET        shift and go to state 10

    in_list                        shift and go to state 33
    expression                     shift and go to state 34
    indexing                       shift and go to state 6
    list                           shift and go to state 8

state 11

    (12) expression -> expression ADD . expression
    (2) expression -> . NUM
    (3) expression -> . BOOL
    (4) expression -> . STR
    (5) expression -> . indexing
    (6) expression -> . LPAREN expression RPAREN
    (12) expression -> . expression ADD expression
    (13) expression -> . STR ADD STR
    (14) expression -> . list ADD list
    (15) expression -> . expression SUB expression
    (16) expression -> . expression MUL expression
    (17) expression -> . expression DIV expression
    (18) expression -> . expression FLDIV expression
    (19) expression -> . expression MOD expression
    (20) expression -> . expression POW expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression LE expression
    (23) expression -> . expression EQ expression
    (24) expression -> . expression NE expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression GE expression
    (27) expression -> . BOOL OR BOOL
    (28) expression -> . BOOL AND BOOL
    (29) expression -> . NOT BOOL
    (30) expression -> . expression IN expression
    (10) indexing -> . STR LBRACKET expression RBRACKET
    (11) indexing -> . list LBRACKET expression RBRACKET
    (7) list -> . LBRACKET in_list RBRACKET

    NUM             shift and go to state 3
    BOOL            shift and go to state 4
    STR             shift and go to state 5
    LPAREN          shift and go to state 7
    NOT             shift and go to state 9
    LBRACKET        shift and go to state 10

    expression                     shift and go to state 35
    indexing                       shift and go to state 6
    list                           shift and go to state 8

state 12

    (15) expression -> expression SUB . expression
    (2) expression -> . NUM
    (3) expression -> . BOOL
    (4) expression -> . STR
    (5) expression -> . indexing
    (6) expression -> . LPAREN expression RPAREN
    (12) expression -> . expression ADD expression
    (13) expression -> . STR ADD STR
    (14) expression -> . list ADD list
    (15) expression -> . expression SUB expression
    (16) expression -> . expression MUL expression
    (17) expression -> . expression DIV expression
    (18) expression -> . expression FLDIV expression
    (19) expression -> . expression MOD expression
    (20) expression -> . expression POW expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression LE expression
    (23) expression -> . expression EQ expression
    (24) expression -> . expression NE expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression GE expression
    (27) expression -> . BOOL OR BOOL
    (28) expression -> . BOOL AND BOOL
    (29) expression -> . NOT BOOL
    (30) expression -> . expression IN expression
    (10) indexing -> . STR LBRACKET expression RBRACKET
    (11) indexing -> . list LBRACKET expression RBRACKET
    (7) list -> . LBRACKET in_list RBRACKET

    NUM             shift and go to state 3
    BOOL            shift and go to state 4
    STR             shift and go to state 5
    LPAREN          shift and go to state 7
    NOT             shift and go to state 9
    LBRACKET        shift and go to state 10

    expression                     shift and go to state 36
    indexing                       shift and go to state 6
    list                           shift and go to state 8

state 13

    (16) expression -> expression MUL . expression
    (2) expression -> . NUM
    (3) expression -> . BOOL
    (4) expression -> . STR
    (5) expression -> . indexing
    (6) expression -> . LPAREN expression RPAREN
    (12) expression -> . expression ADD expression
    (13) expression -> . STR ADD STR
    (14) expression -> . list ADD list
    (15) expression -> . expression SUB expression
    (16) expression -> . expression MUL expression
    (17) expression -> . expression DIV expression
    (18) expression -> . expression FLDIV expression
    (19) expression -> . expression MOD expression
    (20) expression -> . expression POW expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression LE expression
    (23) expression -> . expression EQ expression
    (24) expression -> . expression NE expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression GE expression
    (27) expression -> . BOOL OR BOOL
    (28) expression -> . BOOL AND BOOL
    (29) expression -> . NOT BOOL
    (30) expression -> . expression IN expression
    (10) indexing -> . STR LBRACKET expression RBRACKET
    (11) indexing -> . list LBRACKET expression RBRACKET
    (7) list -> . LBRACKET in_list RBRACKET

    NUM             shift and go to state 3
    BOOL            shift and go to state 4
    STR             shift and go to state 5
    LPAREN          shift and go to state 7
    NOT             shift and go to state 9
    LBRACKET        shift and go to state 10

    expression                     shift and go to state 37
    indexing                       shift and go to state 6
    list                           shift and go to state 8

state 14

    (17) expression -> expression DIV . expression
    (2) expression -> . NUM
    (3) expression -> . BOOL
    (4) expression -> . STR
    (5) expression -> . indexing
    (6) expression -> . LPAREN expression RPAREN
    (12) expression -> . expression ADD expression
    (13) expression -> . STR ADD STR
    (14) expression -> . list ADD list
    (15) expression -> . expression SUB expression
    (16) expression -> . expression MUL expression
    (17) expression -> . expression DIV expression
    (18) expression -> . expression FLDIV expression
    (19) expression -> . expression MOD expression
    (20) expression -> . expression POW expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression LE expression
    (23) expression -> . expression EQ expression
    (24) expression -> . expression NE expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression GE expression
    (27) expression -> . BOOL OR BOOL
    (28) expression -> . BOOL AND BOOL
    (29) expression -> . NOT BOOL
    (30) expression -> . expression IN expression
    (10) indexing -> . STR LBRACKET expression RBRACKET
    (11) indexing -> . list LBRACKET expression RBRACKET
    (7) list -> . LBRACKET in_list RBRACKET

    NUM             shift and go to state 3
    BOOL            shift and go to state 4
    STR             shift and go to state 5
    LPAREN          shift and go to state 7
    NOT             shift and go to state 9
    LBRACKET        shift and go to state 10

    expression                     shift and go to state 38
    indexing                       shift and go to state 6
    list                           shift and go to state 8

state 15

    (18) expression -> expression FLDIV . expression
    (2) expression -> . NUM
    (3) expression -> . BOOL
    (4) expression -> . STR
    (5) expression -> . indexing
    (6) expression -> . LPAREN expression RPAREN
    (12) expression -> . expression ADD expression
    (13) expression -> . STR ADD STR
    (14) expression -> . list ADD list
    (15) expression -> . expression SUB expression
    (16) expression -> . expression MUL expression
    (17) expression -> . expression DIV expression
    (18) expression -> . expression FLDIV expression
    (19) expression -> . expression MOD expression
    (20) expression -> . expression POW expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression LE expression
    (23) expression -> . expression EQ expression
    (24) expression -> . expression NE expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression GE expression
    (27) expression -> . BOOL OR BOOL
    (28) expression -> . BOOL AND BOOL
    (29) expression -> . NOT BOOL
    (30) expression -> . expression IN expression
    (10) indexing -> . STR LBRACKET expression RBRACKET
    (11) indexing -> . list LBRACKET expression RBRACKET
    (7) list -> . LBRACKET in_list RBRACKET

    NUM             shift and go to state 3
    BOOL            shift and go to state 4
    STR             shift and go to state 5
    LPAREN          shift and go to state 7
    NOT             shift and go to state 9
    LBRACKET        shift and go to state 10

    expression                     shift and go to state 39
    indexing                       shift and go to state 6
    list                           shift and go to state 8

state 16

    (19) expression -> expression MOD . expression
    (2) expression -> . NUM
    (3) expression -> . BOOL
    (4) expression -> . STR
    (5) expression -> . indexing
    (6) expression -> . LPAREN expression RPAREN
    (12) expression -> . expression ADD expression
    (13) expression -> . STR ADD STR
    (14) expression -> . list ADD list
    (15) expression -> . expression SUB expression
    (16) expression -> . expression MUL expression
    (17) expression -> . expression DIV expression
    (18) expression -> . expression FLDIV expression
    (19) expression -> . expression MOD expression
    (20) expression -> . expression POW expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression LE expression
    (23) expression -> . expression EQ expression
    (24) expression -> . expression NE expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression GE expression
    (27) expression -> . BOOL OR BOOL
    (28) expression -> . BOOL AND BOOL
    (29) expression -> . NOT BOOL
    (30) expression -> . expression IN expression
    (10) indexing -> . STR LBRACKET expression RBRACKET
    (11) indexing -> . list LBRACKET expression RBRACKET
    (7) list -> . LBRACKET in_list RBRACKET

    NUM             shift and go to state 3
    BOOL            shift and go to state 4
    STR             shift and go to state 5
    LPAREN          shift and go to state 7
    NOT             shift and go to state 9
    LBRACKET        shift and go to state 10

    expression                     shift and go to state 40
    indexing                       shift and go to state 6
    list                           shift and go to state 8

state 17
